Working version
---------------

(Changes that can break existing programs are marked with a "*")

### Language features

- #7557, #1726: multi-indices for extended indexing operators
  (Florian Angeletti, review by Gabriel Radanne)

### Internal/compiler-libs changes:

- #8844: Printing faulty constructors, inline records fields and their types
  during type mismatches. Also slightly changed other type mismatches error
  output.
  (Mekhrubon Turaev, review by Florian Angeletti, Leo White)

- #8828: Added abstractions for variants, records, constructors, fields and
  extension constructor types mismatch.
  (Mekhrubon Turaev, review by Florian Angeletti, Leo White and Gabriel Scherer)

- #7927, #8527: Replace long tuples into records in typeclass.ml
  (Ulugbek Abdullaev, review by David Allsopp and Gabriel Scherer)

- #1901: Fix lexing of character literals in comments
  (Pieter Goetschalckx, review by Damien Doligez)

- #1932: Allow octal escape sequences and identifiers containing apostrophes
  in ocamlyacc actions and comments.
  (Pieter Goetschalckx, review by Damien Doligez)

- #2288: Move middle end code from [Asmgen] to [Clambda_middle_end] and
  [Flambda_middle_end].  Run [Un_anf] from the middle end, not [Cmmgen].
  (Mark Shinwell, review by Pierre Chambart)

- #8692: Remove Misc.may_map and similar
  (Leo White, review by Gabriel Scherer and Thomas Refis)

- #8677: Use unsigned comparisons in amd64 and i386 emitter of Lcondbranch3.
  (Greta Yorsh, review by Xavier Leroy)

- #8766: Parmatch: introduce a type for simplified pattern heads
  (Gabriel Scherer and Thomas Refis, review by Stephen Dolan and
   Florian Angeletti)

- #8774: New implementation of Env.make_copy_of_types
  (Alain Frisch, review by Thomas Refis, Leo White and Jacques Garrigue)

- #7924: Use a variant instead of an int in Bad_variance exception
  (Rian Douglas, review by Gabriel Scherer)

- #8890: in -dtimings output, show time spent in C linker clearly
  (Valentin Gatien-Baron)
