@@ -1,4 +1,5 @@
 (* TEST
+   compare_programs = "false" (* See https://github.com/ocaml/ocaml/pull/8853 *)
 *)
 
 (** Test the various change_layout for Genarray and the various Array[n] *)
